--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -20,4 +20,5 @@
 @import
     '../../blocks/camp-cards/camp-cards',
     '../../blocks/latest-blogs/latest-blogs',
+    '../../blocks/video/video',
     '../../blocks/page-intro/page-intro';
