--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -21,4 +21,5 @@
     '../../blocks/camp-cards/camp-cards',
     '../../blocks/latest-blogs/latest-blogs',
     '../../blocks/video/video',
+    '../../blocks/image-with-overlapping-text/image-with-overlapping-text',
     '../../blocks/page-intro/page-intro';
