--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -22,4 +22,5 @@
     '../../blocks/latest-blogs/latest-blogs',
     '../../blocks/video/video',
     '../../blocks/image-with-overlapping-text/image-with-overlapping-text',
+    '../../blocks/direction-team/direction-team',
     '../../blocks/page-intro/page-intro';
