--- a/wp-content/themes/fcc/resources/sass/_bootstrap.scss
+++ b/wp-content/themes/fcc/resources/sass/_bootstrap.scss
@@ -19,6 +19,8 @@
 // Custom Mixins
 @import "mixins";
 
+@import "utilities";
+
 @import "~bootstrap/scss/utilities";
 
 // Layout & components
@@ -46,7 +48,7 @@
 // @import "~bootstrap/scss/list-group";
 // @import "~bootstrap/scss/close";
 // @import "~bootstrap/scss/toasts";
-// @import "~bootstrap/scss/modal";
+@import "~bootstrap/scss/modal";
 // @import "~bootstrap/scss/tooltip";
 // @import "~bootstrap/scss/popover";
 // @import "~bootstrap/scss/carousel";
