staff and FAQ blocks

--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -17,10 +17,13 @@
 @import "main/header";
 @import "main/footer";
 
+// Blocks
 @import
     '../../blocks/camp-cards/camp-cards',
     '../../blocks/latest-blogs/latest-blogs',
     '../../blocks/video/video',
     '../../blocks/image-with-overlapping-text/image-with-overlapping-text',
     '../../blocks/direction-team/direction-team',
+    '../../blocks/board-of-directors/board-of-directors',
+    '../../blocks/CTA-with-image/cta-with-image',
     '../../blocks/page-intro/page-intro';
