--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -26,4 +26,5 @@
     '../../blocks/direction-team/direction-team',
     '../../blocks/board-of-directors/board-of-directors',
     '../../blocks/CTA-with-image/cta-with-image',
+    '../../blocks/faqs-with-search/faqs-with-search',
     '../../blocks/page-intro/page-intro';
