finish contact page blocks

--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -21,4 +21,7 @@
     '../../blocks/camp-cards/camp-cards',
     '../../blocks/latest-blogs/latest-blogs',
     '../../blocks/video/video',
+    '../../blocks/cta-alt/cta-alt',
+    '../../blocks/contact-cards/contact-cards',
+    '../../blocks/map/map',
     '../../blocks/page-intro/page-intro';
