build blog pages

--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -16,6 +16,7 @@
 @import "main/general";
 @import "main/header";
 @import "main/footer";
+@import "main/blog";
 
 @import
     '../../blocks/camp-cards/camp-cards',
