--- a/wp-content/themes/fcc/resources/sass/_mixins.scss
+++ b/wp-content/themes/fcc/resources/sass/_mixins.scss
@@ -9,3 +9,15 @@
 .small-container {
     @include make-container();
 }
+
+@each $breakpoint, $blog-container-max-width in $blog-container-max-widths {
+    @include media-breakpoint-up($breakpoint, $grid-breakpoints) {
+        .blog-container{
+            max-width: $blog-container-max-width;
+        }
+    }
+}
+
+.blog-container {
+    @include make-container();
+}
