--- a/wp-content/themes/fcc/resources/sass/_vars.scss
+++ b/wp-content/themes/fcc/resources/sass/_vars.scss
@@ -160,6 +160,12 @@ $small-container-max-widths: (
         xl: 1140px,
 );
 
+$blog-container-max-widths: (
+        sm: 540px,
+        md: 720px,
+        lg: 960px,
+);
+
 // scss-docs-end container-max-widths
 
 // Grid columns
