--- a/wp-content/themes/fcc/resources/sass/components/_hero.scss
+++ b/wp-content/themes/fcc/resources/sass/components/_hero.scss
@@ -1,11 +1,20 @@
 #hero {
     min-height: 800px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     position: relative;
     padding: 30px;
     .hero-text {
         max-width: 755px;
+    }
+
+    &.darken {
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            background-color: rgba(0,0,0,0.5);
+        }
     }
 }
