set up branding colours for camps Build info cards block

--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -30,4 +30,6 @@
     '../../blocks/board-of-directors/board-of-directors',
     '../../blocks/cta-with-image/cta-with-image',
     '../../blocks/faqs-with-search/faqs-with-search',
+    '../../blocks/camp-video/camp-video',
+    '../../blocks/info-cards/info-cards',
     '../../blocks/page-intro/page-intro';
