Build reviews block

--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -4,6 +4,7 @@
 
 @import "../../node_modules/swiper/swiper";
 @import "../../node_modules/swiper/modules/navigation";
+@import "../../node_modules/swiper/modules/effect-fade";
 
 
 // WordPress Core CSS
@@ -32,4 +33,5 @@
     '../../blocks/faqs-with-search/faqs-with-search',
     '../../blocks/camp-video/camp-video',
     '../../blocks/info-cards/info-cards',
+    '../../blocks/camp-reviews/camp-reviews',
     '../../blocks/page-intro/page-intro';
