--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -34,4 +34,5 @@
     '../../blocks/camp-video/camp-video',
     '../../blocks/info-cards/info-cards',
     '../../blocks/camp-reviews/camp-reviews',
+    '../../blocks/experience-cards/experience-cards',
     '../../blocks/page-intro/page-intro';
