--- a/wp-content/themes/fcc/resources/sass/main/_general.scss
+++ b/wp-content/themes/fcc/resources/sass/main/_general.scss
@@ -27,6 +27,10 @@ a {
   box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.10);
 }
 
+.fcc-shadow {
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.10);
+}
+
 body small {
   font-size: $font-size-sm;
 }
