build schedule block - desktop version

--- a/wp-content/themes/fcc/resources/sass/_utilities.scss
+++ b/wp-content/themes/fcc/resources/sass/_utilities.scss
@@ -43,6 +43,7 @@ $utilities: map-merge(
       values: (
         0: 0,
         25: .25,
+        30: .3,
         50: .5,
         75: .75,
         100: 1,
@@ -680,6 +681,7 @@ $utilities: map-merge(
       values: (
         10: .1,
         25: .25,
+        30: .3,
         50: .5,
         75: .75,
         100: 1
