--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -35,4 +35,5 @@
     '../../blocks/info-cards/info-cards',
     '../../blocks/camp-reviews/camp-reviews',
     '../../blocks/experience-cards/experience-cards',
-    '../../blocks/page-intro/page-intro';
+    '../../blocks/page-intro/page-intro',
+    '../../blocks/experience-carousel/experience-carousel';
