add white splash to background

--- a/wp-content/themes/fcc/blocks/priorities/priorities.scss
+++ b/wp-content/themes/fcc/blocks/priorities/priorities.scss
@@ -1,5 +1,6 @@
-#video {
-    iframe {
-        @extend .rounded;
+.priorities {
+    &.add-tan-bg {
+        background: url(../../resources/images/day-camp-theme/shapes/splash-white-bottom-flipped.svg) center bottom no-repeat,
+        $tan;
     }
 }
