--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -36,4 +36,5 @@
     '../../blocks/camp-reviews/camp-reviews',
     '../../blocks/experience-cards/experience-cards',
     '../../blocks/page-intro/page-intro',
-    '../../blocks/schedule/schedule';
+    '../../blocks/schedule/schedule',
+    '../../blocks/priorities/priorities';
