--- a/wp-content/themes/fcc/resources/sass/_utilities.scss
+++ b/wp-content/themes/fcc/resources/sass/_utilities.scss
@@ -286,9 +286,14 @@ $utilities: map-merge(
         values: (
             10: 10px,
             20: 20px,
+            171: 171px,
             420: 420px,
             520: 520px,
             671: 671px,
+            800: 800px,
+            1000: 1000px,
+            1200: 1200px,
+            1400: 1400px,
         ),
   ),
     "viewport-height": (
