--- a/wp-content/themes/fcc/blocks/experience-carousel/experience-carousel.scss
+++ b/wp-content/themes/fcc/blocks/experience-carousel/experience-carousel.scss
@@ -1,33 +1,24 @@
 
 .bottom-splash {
-  height: 800px;
   background-image: url(../../resources/images/main-theme/shapes/yellow-bottom-splash.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-
-    @include media-breakpoint-down(xl) {
-     height: 1200px;
-  }
 }
 
 
 .presentation {
-    height: 171px;
-    transition: ease-in-out cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition:transform 0.7s ease;
 }
+
+  .small-icon {
+       transition: transform 0.7s ease;
+} 
+
 .presentation:hover {
     .hover-event  {
-         transition: ease-in-out cubic-bezier(0.25, 0.1, 0.25, 1);
-    .big-icon
-    {
-      display: block!important;
-      position: absolute;
-      top: 20%;
-    }
-
     .small-icon {
-      display: none;
+      transform: scale(1.5) translateY(-10px);
     } 
 
     .txt {
@@ -40,12 +31,11 @@
   }
 }
 
-ul {
-  margin-bottom: 0;
-  padding: 0;
-
-  li {
-    list-style-type: none;
-    padding: 0;
-  }
+//Bootstrap classes overriding
+.nav-tabs, .nav-tabs .nav-link {
+  border: none;
 }
+.nav-tabs .nav-link.active {
+  background-color: transparent;
+}
+
