create policies page template

--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -18,6 +18,7 @@
 @import "main/header";
 @import "main/footer";
 @import "main/blog";
+@import "main/policies";
 
 @import
     '../../blocks/camp-cards/camp-cards',
