--- a/wp-content/themes/fcc/blocks/experience-carousel/experience-carousel.scss
+++ b/wp-content/themes/fcc/blocks/experience-carousel/experience-carousel.scss
@@ -1,12 +1,29 @@
 
-.bottom-splash {
-  background-image: url(../../resources/images/main-theme/shapes/yellow-bottom-splash.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
+.gold-theme {
+  #experience-carousel {
+    background:  url(../../resources/images/day-camp-theme/shapes/splash-bottom-gold.png) center / cover no-repeat,
+    linear-gradient(180deg, #FFC340 0%, #F5A800 100%);
+  }
+    
+  }
 
+  .teal-theme {
+  #experience-carousel {
+    background:  url(../../resources/images/day-camp-theme/shapes/splash-bottom-teal.png) center / cover no-repeat,
+    linear-gradient(180deg, #1FD3FA 0%, #0FC1E8 100%);
+    }
+  }
+  
+  .green-theme {
+      #experience-carousel {
+      background:  url(../../resources/images/day-camp-theme/shapes/grey-background.png) center / cover no-repeat,
+    }
+  }
 
+  .rounded-container {
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.10);
+  }
+ 
 .presentation {
   transition:transform 0.7s ease;
 }
