--- a/wp-content/themes/fcc/resources/sass/_utilities.scss
+++ b/wp-content/themes/fcc/resources/sass/_utilities.scss
@@ -205,6 +205,7 @@ $utilities: map-merge(
       values: (
         '1': 1px,
         '2': 2px,
+        '3': 3px,
         '5': 5px,
         '20': 20px,
       )
