--- a/wp-content/themes/fcc/resources/sass/_vars.scss
+++ b/wp-content/themes/fcc/resources/sass/_vars.scss
@@ -89,6 +89,8 @@ $secondary-gradient: linear-gradient(180deg, #FFC340 0%, #F5A800 100%);
 $spacers: (
     0: 0,
     1: #{divide(1, 16)}rem,
+    3: #{divide(3, 16)}rem,
+    2: #{divide(2.5, 16)}rem,
     5: #{divide(5, 16)}rem,
     10: #{divide(10, 16)}rem,
     12: #{divide(12, 16)}rem,
@@ -207,8 +209,12 @@ $h3-font-size: 2.375rem; // 38px
 $h4-font-size: 1.75rem; // 28px
 $h5-font-size: 1.3125rem; // 21px
 $h6-font-size: 1rem; // 16px
+$h6-font-size: 0.75rem; // 12px
 // scss-docs-end font-variables
 
+$font-sizes: (
+6: $h6-font-size,
+);
 
 // scss-docs-start headings-variables
 $headings-font-family: $font-family-sans-serif;
@@ -307,3 +313,13 @@ $input-border-width: 0;
 $input-focus-box-shadow: 0;
 
 $box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.60);
+
+
+// Table
+// $table-cell-padding-y: #{divide(2.5, 16)}rem;
+// $table-cell-padding-x: #{divide(2.5, 16)}rem;
+
+.table {
+    border-collapse: separate;
+    border-spacing: 5px;
+}
