--- a/wp-content/themes/fcc/resources/sass/_vars.scss
+++ b/wp-content/themes/fcc/resources/sass/_vars.scss
@@ -109,6 +109,8 @@ $spacers: (
     100:#{divide(100, 16)}rem,
     125:#{divide(125, 16)}rem,
     225:#{divide(225, 16)}rem,
+    250:#{divide(250, 16)}rem,
+    300:#{divide(300, 16)}rem,
 );
 // scss-docs-end spacer-variables-maps
 
