splash rotate adding

--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -41,4 +41,5 @@
     '../../blocks/priorities/priorities',
     '../../blocks/schedule/schedule',
     '../../blocks/page-intro/page-intro',
-    '../../blocks/experience-carousel/experience-carousel';
+    '../../blocks/experience-carousel/experience-carousel',
+    '../../blocks/locations/locations';
