--- a/wp-content/themes/fcc/resources/sass/_vars.scss
+++ b/wp-content/themes/fcc/resources/sass/_vars.scss
@@ -308,4 +308,5 @@ $input-border-radius: 5px;
 $input-border-width: 0;
 $input-focus-box-shadow: 0;
 
-$box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.60);
+$box-shadow-lg: 0px 5px 20px 0px rgba(0, 0, 0, 0.60);
+$box-shadow-sm: 0px 5px 20px 0px rgba(0, 0, 0, 0.10);
