--- a/wp-content/themes/fcc/blocks/locations/locations.scss
+++ b/wp-content/themes/fcc/blocks/locations/locations.scss
@@ -1,6 +1,6 @@
 
    .gold-theme {
-        #locations {
+        .locations {
             background: url(../../resources/images/day-camp-theme/shapes/splash-white-top.svg) center top 0 no-repeat,
             url(../../resources/images/day-camp-theme/shapes/splash-white-bottom-flipped.svg) center bottom 0 no-repeat,
             linear-gradient(180deg, #FFC340 0%, #F5A800 100%); 
@@ -8,14 +8,14 @@
     }
 
     .teal-theme {
-         #locations {
+         .locations {
             background: url(../../resources/images/day-camp-theme/shapes/splash-white-top.svg) center top 0 no-repeat,
             url(../../resources/images/day-camp-theme/shapes/splash-white-bottom-flipped.svg) center bottom 0 no-repeat,
             linear-gradient(180deg, #1FD3FA 0%, #0FC1E8 100%);
          }
     }
 
-  #locations {
+  .locations {
     iframe {
         @extend .rounded-2;
     }
