change camp menus

--- a/wp-content/themes/fcc/resources/sass/main/_header.scss
+++ b/wp-content/themes/fcc/resources/sass/main/_header.scss
@@ -146,6 +146,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    .menu-item {
+      a {
+        @extend .btn;
+        @extend .btn-text;
+        @extend .text-white;
+      }
+    }
   }
 }
 
