update container block

--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -42,4 +42,5 @@
     '../../blocks/schedule/schedule',
     '../../blocks/page-intro/page-intro',
     '../../blocks/experience-carousel/experience-carousel',
+    '../../blocks/container/container',
     '../../blocks/locations/locations';
