--- a/wp-content/themes/fcc/resources/sass/_vars.scss
+++ b/wp-content/themes/fcc/resources/sass/_vars.scss
@@ -1,4 +1,16 @@
 $enable-rfs: true;
+
+// Position variable
+ $position-values: (
+    0: 0,
+    15: 15%,
+    20: 20%,
+    50: 50%,
+    55: 55%,
+    100: 100%,
+    100px: 100px,
+);
+
 // Color system
 
 // scss-docs-start color-variables
@@ -211,12 +223,7 @@ $h3-font-size: 2.375rem; // 38px
 $h4-font-size: 1.75rem; // 28px
 $h5-font-size: 1.3125rem; // 21px
 $h6-font-size: 1rem; // 16px
-$h6-font-size: 0.75rem; // 12px
 // scss-docs-end font-variables
-
-$font-sizes: (
-6: $h6-font-size,
-);
 
 // scss-docs-start headings-variables
 $headings-font-family: $font-family-sans-serif;
@@ -315,13 +322,3 @@ $input-border-width: 0;
 $input-focus-box-shadow: 0;
 
 $box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.60);
-
-
-// Table
-// $table-cell-padding-y: #{divide(2.5, 16)}rem;
-// $table-cell-padding-x: #{divide(2.5, 16)}rem;
-
-.table {
-    border-collapse: separate;
-    border-spacing: 5px;
-}
